tests/ui/error-codes/E0388.32bit.stderr
warning: taking a mutable reference to a `const` item
  --> $DIR/E0388.rs:6:30
   |
LL | const CR: &'static mut i32 = &mut C;
   |                              ^^^^^^
   |
   = note: each usage of a `const` item creates a new temporary
   = note: the mutable reference will refer to this temporary, not the original `const` item
note: `const` item defined here
  --> $DIR/E0388.rs:4:1
   |
LL | const C: i32 = 2;
   | ^^^^^^^^^^^^
   = note: `#[warn(const_item_mutation)]` on by default

error[E0764]: mutable references are not allowed in the final value of constants
  --> $DIR/E0388.rs:6:30
   |
LL | const CR: &'static mut i32 = &mut C;
   |                              ^^^^^^

error[E0658]: mutation through a reference is not allowed in statics
  --> $DIR/E0388.rs:9:39
   |
LL | static STATIC_REF: &'static mut i32 = &mut X;
   |                                       ^^^^^^
   |
   = note: see issue #57349 <https://github.com/rust-lang/rust/issues/57349> for more information
   = help: add `#![feature(const_mut_refs)]` to the crate attributes to enable

error[E0764]: mutable references are not allowed in the final value of statics
  --> $DIR/E0388.rs:9:39
   |
LL | static STATIC_REF: &'static mut i32 = &mut X;
   |                                       ^^^^^^

error[E0596]: cannot borrow immutable static item `X` as mutable
  --> $DIR/E0388.rs:9:39
   |
LL | static STATIC_REF: &'static mut i32 = &mut X;
   |                                       ^^^^^^ cannot borrow as mutable

warning: taking a mutable reference to a `const` item
  --> $DIR/E0388.rs:13:38
   |
LL | static CONST_REF: &'static mut i32 = &mut C;
   |                                      ^^^^^^
   |
   = note: each usage of a `const` item creates a new temporary
   = note: the mutable reference will refer to this temporary, not the original `const` item
note: `const` item defined here
  --> $DIR/E0388.rs:4:1
   |
LL | const C: i32 = 2;
   | ^^^^^^^^^^^^

error[E0764]: mutable references are not allowed in the final value of statics
  --> $DIR/E0388.rs:13:38
   |
LL | static CONST_REF: &'static mut i32 = &mut C;
   |                                      ^^^^^^

error[E0080]: it is undefined behavior to use this value
  --> $DIR/E0388.rs:6:1
   |
LL | const CR: &'static mut i32 = &mut C;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^ constructing invalid value: encountered mutable reference in a `const`
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.
   = note: the raw bytes of the constant (size: 4, align: 4) {
               ╾─alloc5──╼                                     │ ╾──╼
           }

error: aborting due to 6 previous errors; 2 warnings emitted

Some errors have detailed explanations: E0080, E0596, E0658, E0764.
For more information about an error, try `rustc --explain E0080`.
